# trovo_bot

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 04b9a46ca011_.py  14f034d3d80f_init.py  469b06664e5e_.py  5ec23fdc42df_.py  601ab2497383_.py  6b1ce5d78cd0_.py  c9dab73fec16_.py  ea740c4605d5_added_config_table.py  ff0d689e1f90_added_diceamount_table.py
app/: config.py  logger.py  main.py  utils.py
app/api/: api.py  deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: bot.py  items.py  login.py  users.py
app/api/endpoints/: bot.py  items.py  login.py  users.py
app/backend_api/: main.py
app/backend_api/api/: api.py
app/backend_api/api/endpoints/: login.py  users.py
app/bot/: bot.py  errors.py  utils.py
app/bot/api/: __init__.py  api.py  chat.py  network.py  schemas.py  socket.py  statuses.py
app/bot/api/donationalerts/: handlers.py  headers.py  socket.py
app/bot/commands/: __init__.py  base.py  commands.py  list_mixin.py
app/bot/commands/internal/: __init__.py  base.py  decorator.py  interface.py  list_controller.py  registry.py  singleton.py
app/bot/commands/modules/: __init__.py  cubes.py  general.py  help.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_bot.py  crud_item.py  crud_items.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  bot.py  config.py  user.py
app/schemas/: __init__.py  bot.py  item.py  items.py  user.py
app/trovo_bot/api/: api.py
app/trovo_bot/api/endpoints/: bot.py
app/trovo_bot/bot/: bot.py  utils.py
app/trovo_bot/bot/api/: __init__.py
app/trovo_bot/bot/donationalerts/: handlers.py  socket.py
app/trovo_bot/bot/trovo/: api.py  chat.py  socket.py  (+1 more)
app/utils/: api.py  config.py  llm.py  logger.py  singleton.py
trovo_backend/: Dockerfile  requirements.txt
trovo_backend/alembic/: env.py
trovo_backend/alembic/versions/: 030f9fbd53c2_.py  112b9b40d800_.py  eec0774a210c_.py  f1f10099fbe3_.py  f3e2b361cf2f_.py
trovo_backend/app/core/: config.py
trovo_backend/app/crud/: __init__.py  base.py  crud_bot.py
trovo_backend/app/db/: base_class.py  init_db.py
trovo_backend/app/models/: bot.py  tracks.py  user.py
trovo_backend/app/schemas/: bot.py  items.py  token.py
trovo_backend/app/trovo_bot/: main.py
trovo_backend/app/utils/: __init__.py  config.py  utils.py
(+46 files in other folders)
