[tool.poetry]
name = "trovo-bot"
version = "0.1.0"
description = ""
authors = ["Yuriy Grebenshchikov <grur.ura@mail.ru>"]
readme = "README.md"
packages = [{ include = "trovo_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = ">=3.10.1,<3.11.0"
pyjwt = ">=2.8.0"
sqlalchemy = ">=2.0.9,<2.1.0"
aiohttp = ">=3.8.3,<3.9.0"
alembic = ">=1.11.1"
bcrypt = ">=4.0.1,<4.1.0"
cryptography = ">=41.0.0"
fastapi = ">=0.101.0"
loguru = ">=0.7.0"
numpy = ">=1.25.0"
passlib = ">=1.7.4,<1.8.0"
psycopg2-binary = ">=2.9.5,<2.10.0"
pydantic = { version = ">=1.10.2,<1.11.0", extras = ["email"] }
python-dotenv = ">=1.0.0"
python-socketio = ">=4.0,<5.0"
requests = ">=2.31.0,<2.32.0"
tenacity = ">=8.1.0"
unidecode = ">=1.3.0"
uvicorn = ">=0.23.0,<0.24.0"
websockets = ">=11"

[tool.poetry.dev-dependencies]
black = ">=23.0.0"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
            (
              /(
                \.git
                | venv
                | .venv
              )/
            )
          '''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
